--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
 .container{
     max-width: 700px;
     display: flex;
-    height: 420px;
+    height: 80%;
     border-radius: 8px;
     /* border: 2px solid black; */
 }
@@ -130,7 +130,7 @@ button img{
         align-items: center;
         flex-direction: column;
         height: auto;
-        
+        margin-top: 70%
     }
     .left_box,
     .right_box {
