--- a/style.css
+++ b/style.css
@@ -130,7 +130,8 @@ button img{
         align-items: center;
         flex-direction: column;
         height: auto;
-        margin-top: 10%
+        margin-top: 10%;
+        height: auto;
     }
     .left_box,
     .right_box {
