--- a/style.css
+++ b/style.css
@@ -23,38 +23,37 @@ body{
 .container{
     max-width: 700px;
     display: flex;
-    height: 80%;
+    max-height: 80%;
+    overflow: hidden;
     border-radius: 8px;
     /* border: 2px solid black; */
 }
 .left_box{
-    /* border: 2px solid red; */
+   
     width: 50%;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
-    overflow: hidden;
+   
     
 }
 .left_box img{
     width: 100%;
-     height: 100%;
- object-fit: cover;
+    height: 100%;
+    object-fit: cover;
  
 }
 .right_box{
     width: 50%;
     background-color: white;
-       border-top-right-radius: 8px;
+    border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-    /* border: 2px solid green; */
+   
 }
 .content{
-    /* border: 2px solid darkblue; */
-    /* max-width: 75%;
-    height: 90%;
-    margin: 25px 25px 25px 33px; */
-      width: 85%;
-  margin: 30px auto;
+ 
+  width: 70%;
+  margin: 40px ;
+  /* border: 2px solid black; */
 }
 .content h3{
     font-family:myfont_2;
@@ -113,59 +112,60 @@ button img{
     width: 16px;
     height: 16px;
 }
-@media (max-width :939px) {
-  .container{
-  max-width: 700px;
-/* border: 2px solid red; */
+
+@media (max-width: 978px) {
+  .container {
+    max-width: 700px;
     
   }
 }
-@media (max-width :720px) {
-    .container{
-        /* border: 2px solid red; */
-        width: 60%;
-         /* max-width: 700px; */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        height: auto;
-        margin-top: 10%;
-        height: auto;
-    }
-    .left_box,
-    .right_box {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
+
+@media (max-width: 720px) {
+  .container {
+    width: 90%; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+   max-height: none;
+   height: auto;
+  }
+.left_box,
+  .right_box {
+    margin: 0;
+    padding: 0;
+    width: 80%;
+  }
 
   .left_box img {
-  display: block;   
-  margin: 0;
-  padding: 0;
-}
-.left_box {
-  border-top-left-radius: 8px;
+    display: block;
+    width: 100%;
+     border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   border-bottom-left-radius: 0;
-}
+  }
 
-.right_box {
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
-}
-.price{
+  .right_box {
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+
+  
+  .price {
     display: flex;
     justify-content: start;
-   }
+    align-items: center;
+    gap: 10px; 
+  }
 }
-@media (max-width : 455px) {
-    .price{
-        flex-wrap: wrap;
-    }
-    .content h2,p{
-        flex-wrap: wrap;
-    }
+
+@media (max-width: 455px) {
+  .price {
+    flex-wrap: wrap;
+  }
+  .content h2,
+  .content p,
+  .price h2{
+    word-wrap: break-word;
+  }
 }
