--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .container {
-    max-width: 700px;
+    width: 700px;
     display: flex;
     height: 420px;
     border-radius: 8px;
@@ -134,7 +134,7 @@ button img {
 @media (max-width :720px) {
     .container {
         /* border: 2px solid red; */
-        width: 90%;
+        max-width: 600px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -149,6 +149,7 @@ button img {
 
    .left_box,
 .right_box {
+     max-width: 600px;
   margin: 0;
   padding: 0;
 }
@@ -165,6 +166,7 @@ button img {
 }   
 }
 @media (max-width :571px) {
+    
     .price{
         flex-direction: column;
     }
