--- a/style.css
+++ b/style.css
@@ -134,12 +134,14 @@ button img {
 @media (max-width :720px) {
     .container {
         /* border: 2px solid red; */
-        max-width: 700px;
+        /* width: 100%; */
+        min-width: 1000px;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         height: auto;
+        margin: 0 auto;
     }
 
     .left_box img {
@@ -162,13 +164,4 @@ button img {
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }   
-}
-@media (max-width :571px) {
-    
-    .price{
-        flex-direction: column;
-    }
-    .content h2,h3,p{
-        word-wrap: break-word;
-    }
 }
