--- a/style.css
+++ b/style.css
@@ -141,11 +141,11 @@ button img {
         align-items: center;
         flex-direction: column;
         height: auto;
-        margin: 0 auto;
+        margin: 20px auto 20px auto;
     }
 
     .left_box img {
-        height: 100%;
+        /* height: 50%; */
         display: block;
     }
 
