--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@ body {
     width: 50%;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
-.left_box img {
+/* .left_box img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 
 .right_box {
     width: 50%;
@@ -123,6 +123,12 @@ button img {
     width: 16px;
     height: 16px;
 }
+.left_box{
+    background-image: url(./images/image-product-desktop.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+   
+}
 
 @media (max-width :939px) {
     .container {
@@ -136,7 +142,7 @@ button img {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;     
+       
     background-color: antiquewhite;
 }
     .container {
@@ -152,18 +158,25 @@ button img {
     }
 
     .left_box img {
-        /* height: 50%; */
+        height: 100%;
+        width: 100%;
         display: block;
     }
 
    .left_box,
 .right_box {
-     max-width: 700px;
+     /* max-width: 700px;
+      */
+      width: 70%;
+      
 }
+
 .left_box {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   border-bottom-left-radius: 0;
+ 
+  height: 300px;
 }
 
 .right_box {
@@ -179,4 +192,15 @@ button img {
   .content p {
     word-wrap: break-word;
   }
+}
+@media (max-width :500px) {
+    .left_box,
+    .right_box{
+        width: 90%;
+       
+    }
+    .container{
+         margin-top: 20px;
+        margin-bottom: 20px;
+    }
 }
